<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_espacial">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="80dp"
        android:gravity="center"
        android:text="@string/Registro_texto"
        android:textSize="20sp"
        android:textColor="@color/white" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/nasa"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/user"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:text=""
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>

        <EditText
            android:id="@+id/Correo"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="-325dp"
            android:layout_marginTop="80dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Correo_Usuario"
            android:inputType="textPersonName"
            android:text=""
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="-325dp"
            android:layout_marginTop="130dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>

        <EditText
            android:id="@+id/contraseña2"
            android:layout_width="326dp"
            android:layout_height="48dp"
            android:layout_marginStart="-326dp"
            android:layout_marginTop="180dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="278dp"
            android:layout_height="29dp"
            android:layout_marginStart="-310dp"
            android:layout_marginTop="240dp"
            android:gravity="center"
            android:text="@string/Fecha_nacimiento"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/Nacionalidad"
            style="?android:spinnerStyle"
            android:layout_width="290dp"
            android:layout_height="51dp"
            android:layout_marginStart="-280dp"
            android:layout_marginTop="360dp"
            android:contentDescription="@string/Ingrese_Datos"
            android:gravity="center"
            android:backgroundTint="#ffffff"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnAceptar"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-280dp"
            android:layout_marginTop="420dp"
            android:text="@string/aceptar"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <Button
            android:id="@+id/btnCancelar"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="420dp"

            android:text="@string/cancelar"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-260dp"
            android:layout_marginTop="320dp"
            android:gravity="center"
            android:text="@string/Nacionalidad"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <Button
            android:id="@+id/btnNacimiento"
            style="?android:spinnerStyle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-250dp"
            android:layout_marginTop="280dp"
            android:gravity="center"
            android:onClick="OpenDatePicker"
            android:text="ENERO 01 2020"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />




    </LinearLayout>
</LinearLayout>